--- a/style.css
+++ b/style.css
@@ -77,4 +77,12 @@
     padding: 0.2em 0.5em;
     cursor: pointer;
   }
-  
+  .graficos-container {
+    margin: 20px;
+    text-align: center;
+}
+
+canvas {
+    max-width: 80%;
+    margin: 20px auto;
+}
